removed dark mode globals.css, replaced calendar section bg, fix attempt hover modal buttons

--- a/src/components/LandingPage/CalendarSection/CalendarBox/CalendarBox.module.scss
+++ b/src/components/LandingPage/CalendarSection/CalendarBox/CalendarBox.module.scss
@@ -2,7 +2,7 @@
 
 .container {
     height: 45rem;
-    width: 25rem;
+    width: 20rem;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
