--- a/src/components/LandingPage/CalendarSection/CalendarSection.module.scss
+++ b/src/components/LandingPage/CalendarSection/CalendarSection.module.scss
@@ -5,7 +5,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-image: url('/assets/calendar-bg-big.png');
+    background-image: url('/assets/calendar-bg-big1.png');
     background-position: bottom;
     background-size: cover;
     background-repeat: no-repeat;
