--- a/src/components/TicketsPage/TicketsPage.module.scss
+++ b/src/components/TicketsPage/TicketsPage.module.scss
@@ -1,6 +1,7 @@
 @import '/styles/variables.scss';
 
 .section {
+    height: 100%;
     background-color: #2D167E;
     background-image: url('/assets/tix-bg.png');
     background-position: center;
@@ -9,7 +10,7 @@
 
     .container {
         padding: 3rem 0;
-        height: fit-content;
+        height: 100%;
 
         .logo {
             padding: 1rem 0;
